# Aurio

./: .gitignore  .versionrc.js  CHANGELOG.md  CNAME  Dockerfile.libaurioffmpeglinuxbuild  Dockerfile.libaurioffmpegproxytest  NOTICE  README.md  build-and-pack.ps1  build-nativesrc-linux.sh  build-nuget-readme.ps1  index.html  install-deps.ps1  install-deps.sh  params.json  publish-local-dev.ps1
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
AudioAlign/: AudioAlign.sln  AudioAlign.vsmdi  Aurio.sln  GlobalAssemblyInfo.cs  Local.testsettings  TraceAndTestImpact.testsettings
AudioAlign/AudioAlign.Audio/: AbstractAudioStream.cs  AudioAlign.Audio.csproj  AudioBuffer.cs  AudioProperties.cs  AudioStreamFactory.cs  AudioStreamWrapper.cs  AudioUtil.cs  FFTAnalyzer.cs  FFTUtil.cs  IAudioStream.cs  IAudioStream16.cs  Interval.cs  MultitrackPlayer.cs  NAudio16BitWaveFileReaderWrapperStream.cs  Peak.cs  PeakStore.cs  PointPair.cs  StreamUtil.cs  TimeUtil.cs  VisualizingAudioStream16.cs  VolumeUtil.cs  WindowFunction.cs
AudioAlign/AudioAlign.Audio.ResamplingStreamTest/: App.xaml  App.xaml.cs  AudioAlign.Audio.ResamplingStreamTest.csproj  MainWindow.xaml  MainWindow.xaml.cs
AudioAlign/AudioAlign.Audio.UnitTest/: AudioAlign.Audio.UnitTest.csproj  AudioBufferTest.cs  MonoStreamTest.cs  ResamplingStreamTest.cs  TimeWarpCollectionTest.cs  TimeWarpStreamTest.cs  UndirectedGraphTest.cs  VolumeUtilTest.cs
AudioAlign/AudioAlign.FFTW/: AudioAlign.FFTW.csproj  FFTW.cs  Interop32Wrapper.cs  Interop64.cs  Interop64Wrapper.cs
AudioAlign/AudioAlign.FFmpeg/: AudioAlign.FFmpeg.csproj  FFmpegReader.cs  IInteropWrapper.cs  Interop32.cs  Interop32Wrapper.cs  Interop64.cs  Interop64Wrapper.cs  InteropWrapper.cs  OutputConfig.cs
AudioAlign/AudioAlign.FFmpeg.Proxy32/: AudioAlign.FFmpeg.Proxy32.vcxproj  AudioAlign.FFmpeg.Proxy32.vcxproj.filters  proxy.c
AudioAlign/AudioAlign.FFmpeg.Proxy64/: AudioAlign.FFmpeg.Proxy64.vcxproj  AudioAlign.FFmpeg.Proxy64.vcxproj.filters
AudioAlign/AudioAlign.FFmpeg.Test/: AudioAlign.FFmpeg.Test.csproj  Program.cs
AudioAlign/AudioAlign.LibSampleRate/: AudioAlign.LibSampleRate.csproj  ConverterType.cs  Interop.cs  Interop32.cs  Interop64.cs  SampleRateConverter.cs  SrcData.cs
AudioAlign/AudioAlign.LibSampleRate.Test/: App.xaml  App.xaml.cs  AudioAlign.LibSampleRate.Test.csproj  MainWindow.xaml  MainWindow.xaml.cs
AudioAlign/AudioAlign.PFFFT/: AudioAlign.PFFFT.csproj  InteropWrapper.cs  PFFFT.cs  Transform.cs
AudioAlign/AudioAlign.PFFFT.UnitTest/: AudioAlign.PFFFT.UnitTest.csproj  PffftTest.cs
AudioAlign/AudioAlign.Soxr/: AudioAlign.Soxr.csproj  Datatype.cs  Interop32.cs  Interop64.cs  InteropWrapper.cs  IoFlags.cs  QualityFlags.cs  QualityRecipe.cs  SoxResampler.cs
AudioAlign/AudioAlign.Soxr.UnitTest/: AudioAlign.Soxr.UnitTest.csproj  ResamplerTest.cs  SoxResamplerTest.cs
AudioAlign/AudioAlign.Test.FFT/: App.xaml  AudioAlign.Test.FFT.csproj  FFTLibrary.cs  MainWindow.xaml  MainWindow.xaml.cs  WindowFunctions.xaml  WindowFunctions.xaml.cs
AudioAlign/AudioAlign.WaveControls/: UIUtil.cs  (+38 more)
Aurio/: Aurio.licenseheader  Aurio.sln  Directory.Build.props  GlobalAssemblyInfo.cs
ExocortexDSP/: Exocortex.DSP.csproj  Fourier.cs
SQLite-Net/: ISQLitePlatform.cs  SQLite-Net.csproj  SQLite.cs  SQLiteAsync.cs  SQLiteWin32.cs  SQLiteWin64.cs  SQLiteWinInterop.cs
libs/: DynamicDataDisplay.XML  NAudio.XML  libfftw-prepare.txt  libsamplerate-Makefile.msvc  libsamplerate-prepare.txt  soxr-prepare.txt  sqlite-prepare.txt
nativesrc/: CMakeLists.txt  CMakePresets.json
nativesrc/aurioffmpegproxy/: CMakeLists.txt  main.c  proxy.c  proxy.h  seekindex.c
src/: Aurio.licenseheader  Aurio.sln  Directory.Build.props
stylesheets/: stylesheet.css
(+1343 files in other folders)
